syntax = "proto3";

package evm.tokens.contracts.v1;

message Events {
  repeated ContractCreation contract_creations = 1;
}

message ContractCreation {
  // -- transaction --
  bytes transaction_id = 5;
  bytes from = 6;
  bytes to = 7;

  // -- call --
  bytes caller = 8;

  // -- ordering --
  uint64 ordinal = 10; // log.ordinal

  // -- contract --
  bytes address = 20; // code_change.address
  bytes hash = 21;  // code_change.new_hash
}